[gd_scene load_steps=6 format=3 uid="uid://cc1p788px1xpg"]

[ext_resource type="Script" path="res://Interactable.gd" id="1_d6obo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1hqy"]
size = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_do4w0"]
size = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwi0l"]

[sub_resource type="LabelSettings" id="LabelSettings_l6yjq"]
line_spacing = 0.0
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="StaticBody2D" type="StaticBody2D"]
y_sort_enabled = true
input_pickable = true
script = ExtResource("1_d6obo")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false

[node name="ClickableArea" type="Area2D" parent="."]

[node name="ClickableShape" type="CollisionShape2D" parent="ClickableArea"]
shape = SubResource("RectangleShape2D_j1hqy")
debug_color = Color(0.176471, 0.643137, 0, 0.419608)

[node name="Area2D" type="Area2D" parent="."]

[node name="InteractionShape" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_do4w0")
debug_color = Color(0.996078, 0, 0.192157, 0.180392)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xwi0l")

[node name="PopupMenu" type="PopupMenu" parent="."]
transparent_bg = true
canvas_item_default_texture_filter = 0
position = Vector2i(50, 50)
size = Vector2i(101, 42)
transparent = true
mouse_passthrough = true
content_scale_mode = 2
content_scale_aspect = 4
theme_override_font_sizes/font_separator_size = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 2
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 39.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="Tooltip" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_l6yjq")

[connection signal="input_event" from="ClickableArea" to="." method="_on_clickable_area_input_event"]
[connection signal="mouse_entered" from="ClickableArea" to="." method="_on_clickable_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="." method="_on_clickable_area_mouse_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_body_shape_exited"]
[connection signal="popup_hide" from="PopupMenu" to="." method="_on_popup_menu_popup_hide"]
